# YourAi

./: Dockerfile  DockerfileDjango  DockerfileVue  babel.config.js  docker-compose.yml  manage.py  nginx.conf  package-lock.json  package.json  pyproject.toml  requirements.txt
YourAi/: asgi.py  settings.py  urls.py  wsgi.py
aidrawing/: apps.py
backend/apps/aidrawing/: apps.py
backend/apps/chatgpt/: apps.py  models.py  serializers.py  urls.py  views.py
backend/apps/chatgpt/migrations/: 0001_initial.py  0007_chatmessage_response.py
backend/common/: base_models.py
chatgpt/: models.py  serializers.py  urls.py  views.py
chatgpt/migrations/: 0002_remove_chatbox_chatmessage_chatmessage_chatbox.py  0003_alter_chatbox_id_alter_chatmessage_id.py  0004_alter_chatbox_id_alter_chatmessage_chatbox_and_more.py  0005_alter_chatbox_id_alter_chatmessage_id.py  0006_alter_chatmessage_chatbox.py  0008_alter_chatmessage_message.py
common/: chatgpt.py
public/: index.html
src/: App.vue  main.js
src/api/: getData.js  index.js
src/assets/fonts/: font.css
src/components/: HeadPortrait.vue  MyInfo.vue  Nav.vue  PersonCard.vue
src/mock/: index.js
src/view/pages/chatHome/: chatwindow.vue  index.vue
