[tool.poetry]
name = "yourai"
version = "0.1.0"
description = ""
authors = ["Ryucyu <1104972454@qq.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
Django = "^4.1.7"
django-safedelete = "^1.3.1"
djangorestframework = "^3.14.0"
openai = "^0.27.2"
django-cors-headers = "^3.14.0"
mysqlclient = "^2.1.1"
urllib3 = "1.25.8"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
